--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h1 class="text-effect">Welcome to Kirin XS</h1>
         <p class="text-effect"></p>
         <p class="text-effect">Think Different.</p>
-      <div class="pill alt-hover-2 determine-hover"><a href="home.html">Continue.</a></div>
+      <div class="pill alt-hover-2 determine-hover"><a href="xmvp.github.io/home">Continue.</a></div>
     </div>
 </div>
 </div>
