--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Kirin XS</title>
+<title>XMVP</title>
 <link href="css/application.css" media="all" rel="stylesheet" />
 </head>
 <body>
@@ -30,7 +30,7 @@
   <div class="content">
 <figure class="load-priority" data-frames="82" data-stop-frame="59"></figure>
 <div class="constrain">
-        <h1 class="text-effect">Welcome to Kirin XS</h1>
+        <h1 class="text-effect">Welcome to XMVP</h1>
         <p class="text-effect"></p>
         <p class="text-effect">Think Different.</p>
       <div class="pill alt-hover-2 determine-hover"><a href="xmvp.github.io/home">Continue.</a></div>
