--- a/mario.html
+++ b/mario.html
@@ -1,13 +1,13 @@
 
-<!doctype html><html><head><title>HTML5³¬¼¶ÂêÀö</title><link rel="shortcut icon" href=favicon.png /><link rel=stylesheet type="text/css" href="VNkyVaVxUV.css"><script type="text/javascript" src="jquery.js"></script>
+<!doctype html><html><head><title>SUPER MARIO BROS</title><link rel="shortcut icon" href=favicon.png /><link rel=stylesheet type="text/css" href="VNkyVaVxUV.css"><script type="text/javascript" src="jquery.js"></script>
 
 </head>
 <body>
-<h4>·½Ïò¼ü£ºÒÆ¶¯  &nbsp;&nbsp;S¼ü£ºÌøÔ¾/½øÈë&nbsp;&nbsp;A¼ü£º¿ìÅÜ/Éä»÷</h4>
+<h4>ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Æ¶ï¿½  &nbsp;&nbsp;Sï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ô¾/ï¿½ï¿½ï¿½ï¿½&nbsp;&nbsp;Aï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½/ï¿½ï¿½ï¿½</h4>
 <div class=spacing></div>
 <div class=main>
 <canvas id=canvas width=640 height=480>
-<p style="text-align: center;">Ôã¸â£¡ÄúµÄä¯ÀÀÆ÷²»Ö§³ÖHTML5 Canvas£¬Íæ²»ÁË£¬Çë³¢ÊÔÓÃFirefox¡¢Chrome¡¢IE9ä¯ÀÀÆ÷</p>
+<p style="text-align: center;">ï¿½ï¿½â£¡ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ö§ï¿½ï¿½HTML5 Canvasï¿½ï¿½ï¿½æ²»ï¿½Ë£ï¿½ï¿½ë³¢ï¿½ï¿½ï¿½ï¿½Firefoxï¿½ï¿½Chromeï¿½ï¿½IE9ï¿½ï¿½ï¿½ï¿½ï¿½</p>
 </canvas>
 <div class=spacing></div>
 </div>
@@ -27,7 +27,7 @@
         <a class="bds_qzone"></a>
         <a class="bds_douban"></a>
         <a class="bds_xg"></a>
-        <span class="bds_more">¸ü¶à</span>
+        <span class="bds_more">ï¿½ï¿½ï¿½ï¿½</span>
 		<a class="shareCount"></a>
     </div>
 <script type="text/javascript" id="bdshare_js" data="type=tools" ></script>
