--- a/maze.html
+++ b/maze.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
 <meta charset="UTF-8">
-<title>HTML5倾斜迷宫小游戏 - 源码之家</title>
+<title>XMVP Maze</title>
 
 <link rel="stylesheet" href="css/maze.css">
 
