--- a/tetris.html
+++ b/tetris.html
@@ -32,7 +32,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>teris.html</title>
+<title>TETRIS</title>
 <style>
 	/*设置id = whole_screen内的div为并排显示*/
 	#whole_screen div.map_layout {
