--- a/xiangqi.html
+++ b/xiangqi.html
@@ -2,28 +2,28 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-<title>HTML5 µѕ÷÷–єъѕу∆е”ќѕЈ - ’Њ≥§ЋЎ≤ƒ</title>
+<title>HTML XIANGQI</title>
 <link href="css/zzsc.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
 <div class="box" id="box">
 	<div class="chess_left">
-		<canvas id="chess">ґ‘≤ї∆р£ђƒъµƒдѓјј∆ч≤ї÷І≥÷HTML5£ђ«л…эЉґдѓјј∆ч÷ЅIE9°Ґfirefoxїт’яє»Єидѓјј∆ч£°</canvas>
+		<canvas id="chess">пњљ‘≤пњљпњљпњљпњљпњљпњљпњљпњљпњљпњљпњљпњљпњљпњљ÷ІпњљпњљHTML5пњљпњљпњљпњљпњљпњљпњљпњљпњљпњљпњљпњљпњљпњљпњљIE9пњљпњљfirefoxпњљпњљпњљяє»Єпњљпњљпњљпњљпњљпњљпњљпњљ</canvas>
 		<audio src="audio/click.wav" id="clickAudio" preload="auto"></audio>
 		<!--<audio src="audio/check.wav" id="checkAudio" preload="auto"></audio>-->
 		<audio src="audio/select.wav" id="selectAudio" preload="auto"></audio>
 		<div>
 			<div class="bn_box" id="bnBox">
-				<input type="button" name="offensivePlay" id="tyroPlay" value="–¬ ÷ЋЃ∆љ" />
-				<input type="button" name="offensivePlay" id="superPlay" value="÷–ЉґЋЃ∆љ" />
-                <input type="button" name="button" id="" value="іу ¶ЋЃ∆љ" disabled />
+				<input type="button" name="offensivePlay" id="tyroPlay" value="пњљпњљпњљпњљЋЃ∆љ" />
+				<input type="button" name="offensivePlay" id="superPlay" value="пњљ–ЉпњљЋЃ∆љ" />
+                <input type="button" name="button" id="" value="пњљпњљ ¶ЋЃ∆љ" disabled />
 				<!--
-			<input type="button" name="offensivePlay" id="offensivePlay" value="ѕ» ÷њ™ Љ" />
-			<input type="button" name="defensivePlay" id="defensivePlay" value="Їу ÷њ™ Љ" />
+			<input type="button" name="offensivePlay" id="offensivePlay" value="пњљпњљпњљ÷њпњљ Љ" />
+			<input type="button" name="defensivePlay" id="defensivePlay" value="пњљпњљпњљ÷њпњљ Љ" />
 			-->
-				<input type="button" name="regret" id="regretBn" value="їЏ∆е" />
-				<input type="button" name="billBn" id="billBn" value="∆е∆„" class="bn_box" />
-				<input type="button" name="stypeBn" id="stypeBn" value="їїЈф" />
+				<input type="button" name="regret" id="regretBn" value="пњљпњљпњљпњљ" />
+				<input type="button" name="billBn" id="billBn" value="пњљпњљпњљпњљ" class="bn_box" />
+				<input type="button" name="stypeBn" id="stypeBn" value="пњљпњљпњљпњљ" />
 			</div>
 		</div>
 	</div>
@@ -41,7 +41,7 @@
 <script src="js/bill.js"></script> 
 <script src="js/gambit.js"></script>
 <div style="text-align:center;clear:both">
-<p>  ”√дѓјј∆ч£Ї360°ҐFireFox°ҐChrome°ҐSafari°ҐOpera°Ґ∞Ѕ”ќ°ҐЋ—єЈ°Ґ јљз÷Ѓі∞. ≤ї÷І≥÷IE8Љ∞“‘ѕ¬дѓјј∆ч°£</p>
+<p>пњљпњљпњљпњљпњљпњљпњљпњљпњљпњљпњљ360пњљпњљFireFoxпњљпњљChromeпњљпњљSafariпњљпњљOperaпњљпњљпњљпњљпњљќ°пњљпњљ—єпњљпњљпњљпњљпњљпњљпњљ÷Ѓпњљпњљ. пњљпњљ÷ІпњљпњљIE8пњљпњљпњљпњљпњљпњљпњљпњљпњљпњљпњљпњљпњљ</p>
 </div>
 </body>
 </html>
