--- a/boinkout.html
+++ b/boinkout.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
 <meta charset="UTF-8">
-<title>HTML5弹珠打砖块游戏代码 - 源码之家</title>
+<title>Boink Out</title>
 
 <link rel="stylesheet" href="css/boinkout.css">
 
