--- a/fruitninja.html
+++ b/fruitninja.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
- <meta name="Keywords" content="HTML5游戏,HTML5网页游戏,HTML5水果忍者,HTML5版水果忍者">
-<meta name="description" content="HTML5版水果忍者游戏">
+ <meta name="Keywords" content="FRUIT NINJA">
+<meta name="description" content="HTML FRUIT NINJA">
 <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
