--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>canvas-nest.js</title>
+  <title>XMVP</title>
   <style>
     * {
       margin: 0;
