--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>蜂窝纹路</title>
+    <title>XMVP</title>
 
     <style>
     canvas { position: absolute; top: 0; left: 0; }
