--- a/home.html
+++ b/home.html
@@ -35,7 +35,15 @@
     <meta property="og:type" content="website">
 	  
 
-
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?99c4fdd656d34e21173a320493619c8e";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script
 <!-- Matomo -->
 <script type="text/javascript">
   var _paq = window._paq = window._paq || [];
