--- a/chess.html
+++ b/chess.html
@@ -10,6 +10,15 @@
     <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
     <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css">
     <script src="js/prefixfree.min.js"></script>
+    <script>
+      var _hmt = _hmt || [];
+      (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?99c4fdd656d34e21173a320493619c8e";
+        var s = document.getElementsByTagName("script")[0]; 
+        s.parentNode.insertBefore(hm, s);
+      })();
+      </script>
   </head>
   <body>
     <div id="app" class="loading" data-theme="classic" data-frame="off" data-menu="main">
