--- a/fruitninja.html
+++ b/fruitninja.html
@@ -10,6 +10,15 @@
 <link rel="stylesheet" href="images/index.css">
 <title>HTML5游戏水果忍者网页版-HTML5星空</title>
 <!--[if lt IE 9]><script>document.createElement("canvas");</script><![endif]-->
+<script>
+	var _hmt = _hmt || [];
+	(function() {
+	  var hm = document.createElement("script");
+	  hm.src = "https://hm.baidu.com/hm.js?99c4fdd656d34e21173a320493619c8e";
+	  var s = document.getElementsByTagName("script")[0]; 
+	  s.parentNode.insertBefore(hm, s);
+	})();
+	</script>
 </head>
 <body>
 <div id="extra"></div>
