--- a/surf.html
+++ b/surf.html
@@ -41,6 +41,15 @@
     <script src="focus-visible.min.js"></script>
     <script src="strings.js"></script>
     <link href="interface.css" rel="stylesheet" media="all" />
+    <script>
+      var _hmt = _hmt || [];
+      (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?99c4fdd656d34e21173a320493619c8e";
+        var s = document.getElementsByTagName("script")[0]; 
+        s.parentNode.insertBefore(hm, s);
+      })();
+      </script>
   </head>
   <body>
 		<div id="game-bg" class="full-size"></div>
