--- a/tetris.html
+++ b/tetris.html
@@ -1,34 +1,4 @@
 <!DOCTYPE html>
-<!--
- *  tetris.html  17-05-18
- *  Copyright (C) 17  Chuanpao Su
- *
- *  This program is free software: you can redistribute it and/or modbody[i].y
- *  it under the terms of the GNU General Public License as published by
- *  the Free Software Foundation, either version 3 of the License, or
- *  (at your option) any later version.
- *
- *  This program is distributed in the hope that it will be useful,
- *  but WITHOUT ANY WARRANTY; without even the implied warranty of
- *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- *  GNU General Public License for more details.
- *
- *  You should have received a copy of the GNU General Public License
- *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
- *
- *
- ************************************************************************
- *      FileName: tetris.html
- *
- *        Author: Chuanpao Su
- *       Version: 1.0
- *   Description: ----
- *          Mail: suchuanpao@outlook.com
- *        Create: 2017-05-18 00:00:32
- * Last Modified: 2017-06-07 20:04:21
- *  
- ***********************************************************************-->
-
 <html>
 <head>
 <meta charset="UTF-8">
@@ -156,7 +126,15 @@ function TetrisGame(t_id, width, height) {
 }
 var tetris_game = null;
 </script>
-
+<script>
+	var _hmt = _hmt || [];
+	(function() {
+	  var hm = document.createElement("script");
+	  hm.src = "https://hm.baidu.com/hm.js?99c4fdd656d34e21173a320493619c8e";
+	  var s = document.getElementsByTagName("script")[0]; 
+	  s.parentNode.insertBefore(hm, s);
+	})();
+	</script>
 </head>
 <body style="background-color:white">
 	<div id="whole_screen">
