--- a/404.html
+++ b/404.html
@@ -25,6 +25,15 @@
     <meta name="theme-color" content="#29b7dd">
     <meta property="og:title" content="404">
     <meta property="og:type" content="website">
+    <script>
+      var _hmt = _hmt || [];
+      (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?99c4fdd656d34e21173a320493619c8e";
+        var s = document.getElementsByTagName("script")[0]; 
+        s.parentNode.insertBefore(hm, s);
+      })();
+      </script>
   </head>
   <body class="u-body"><header class="u-clearfix u-header u-palette-2-base u-header" id="sec-2485"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1">
