--- a/boinkout.html
+++ b/boinkout.html
@@ -5,7 +5,15 @@
 <title>Boink Out</title>
 
 <link rel="stylesheet" href="css/boinkout.css">
-
+<script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?99c4fdd656d34e21173a320493619c8e";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
 </head>
 <body>
 
