--- a/game.html
+++ b/game.html
@@ -21,6 +21,15 @@
       top: 32px;
     }
   </style>
+  <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?99c4fdd656d34e21173a320493619c8e";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
 </head>
 <body>
 <h1>Hello World</h1>
