--- a/gamemaster.html
+++ b/gamemaster.html
@@ -31,6 +31,15 @@
         object-fit: contain;
       }
     </style>
+    <script>
+      var _hmt = _hmt || [];
+      (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?99c4fdd656d34e21173a320493619c8e";
+        var s = document.getElementsByTagName("script")[0]; 
+        s.parentNode.insertBefore(hm, s);
+      })();
+      </script>
   </head>
   <body class="loading">
     <canvas width="1920" height="1080"></canvas>
