--- a/life.html
+++ b/life.html
@@ -11,6 +11,15 @@
 <script src="draw.js"></script>
 <script src="macrocell.js"></script>
 <script src="main.js"></script>
+<script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?99c4fdd656d34e21173a320493619c8e";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
 </head>
 <body>
 <div id="toolbar" style="display: none;">
