--- a/mc.html
+++ b/mc.html
@@ -1,5 +1,13 @@
 <!DOCTYPE  html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>Minecraft</title><meta name="author" content="Mojang Ab"/><style type="text/css"> * {margin:0; padding:0; text-indent:0; }
+<html xmlns="http://www.w3.org/1999/xhtml"><head><script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?99c4fdd656d34e21173a320493619c8e";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>Minecraft</title><meta name="author" content="Mojang Ab"/><style type="text/css"> * {margin:0; padding:0; text-indent:0; }
  .s1 { color: #000001; font-family:"Times New Roman", serif; font-style: normal; font-weight: normal; text-decoration: none; font-size: 68pt; }
  .s2 { color: #000001; font-family:宋体; font-style: normal; font-weight: normal; text-decoration: none; font-size: 53.5pt; }
  .s3 { color: #000001; font-family:Arial, sans-serif; font-style: normal; font-weight: normal; text-decoration: none; font-size: 27pt; }
