--- a/trex.html
+++ b/trex.html
@@ -11,7 +11,15 @@
 	<link rel="preload" as="image" href="media/repeat.png" />
 	<link rel="preload" as="image" href="media/preloader-dino.png">
 	<link rel="preload" as="image" href="media/3d-title.png">
-
+	<script>
+		var _hmt = _hmt || [];
+		(function() {
+		  var hm = document.createElement("script");
+		  hm.src = "https://hm.baidu.com/hm.js?99c4fdd656d34e21173a320493619c8e";
+		  var s = document.getElementsByTagName("script")[0]; 
+		  s.parentNode.insertBefore(hm, s);
+		})();
+		</script>
 </head>
 <body>
 
