--- a/xiangqi.html
+++ b/xiangqi.html
@@ -4,6 +4,15 @@
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
 <title>HTML XIANGQI</title>
 <link href="css/zzsc.css" type="text/css" rel="stylesheet" />
+<script>
+	var _hmt = _hmt || [];
+	(function() {
+	  var hm = document.createElement("script");
+	  hm.src = "https://hm.baidu.com/hm.js?99c4fdd656d34e21173a320493619c8e";
+	  var s = document.getElementsByTagName("script")[0]; 
+	  s.parentNode.insertBefore(hm, s);
+	})();
+	</script>
 </head>
 <body>
 <div class="box" id="box">
